# PSO-industrializable-y-evaluacion-de-paralelismo-concurrencia

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: default.yaml  grid_search.yaml
core/: __init__.py  boundaries.py  config.py  engine.py  protocols.py  state.py  topologies.py
docs/: DESIGN.md
experiments/: analyse_results.py  generate_report.py  make_viz.py  run_asyncio_demo.py  run_benchmarks.py  run_color_case.py  run_extras.py  run_grid_search.py  run_portfolio_case.py  run_pso.py
objectives/: __init__.py  color_quantization.py  functions.py  portfolio.py  suite.py
parallel/: __init__.py  async_eval.py  factory.py  multiprocessing_eval.py  sequential.py  threading_eval.py  vectorised_eval.py
persistence/: __init__.py  load.py  save.py
results/asyncio_demo/: summary.json
results/benchmarks/ackley_d10/V0_sequential/seed_123/: history.csv  (+1 more)
results/color_case/: strategy_comparison.json
results/color_case/pso_result/: history.csv  meta.json
results/examples/ackley_d2/: history.csv  meta.json
results/examples/portfolio_10assets/: history.csv  meta.json
results/examples/rastrigin_d10/: history.csv  meta.json
results/examples/sphere_d2/: history.csv  meta.json
results/extras/: cprofile_results.json  cprofile_summary.txt
results/grid_search/: summary.csv
results/portfolio_case/: strategy_comparison.json
results/portfolio_case/pso_result/: history.csv  meta.json
tests/: test_pso.py
viz/: __init__.py  animation.py  color_viz.py  comparison.py  contour.py  convergence.py  helpers.py  portfolio_viz.py  surface.py
(+358 files in other folders)
