[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pso-benchmark"
version = "1.0.0"
description = "PSO with parallel strategy comparison (V0-V4) and 3D printing color optimization"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pyyaml>=6.0", "matplotlib>=3.7", "Pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["core*", "objectives*", "parallel*", "experiments*", "persistence*", "viz*"]
